# ocpcommandcenter

./: .env  .env.example  .env.template  .gitignore  AIOPS-INTEGRATION.md  ARCHITECTURE_DESIGN_MULTI_AGENT.md  BUILD-WORKFLOW-QUICKREF.md  COMPLETION-SUMMARY.md  CONTRIBUTING-SCENARIOS.md  DEMO-RUNBOOK.md  DEMO.md  DOCKER-N8N-FINAL-REPORT.md  DOCKER-N8N-READY.md  DOCKER-VALIDATION-N8N-ONBOARDING.md  ENV-QUICK-REFERENCE.md  EXTENSION-GUIDE.md  IMPLEMENTATION-SUMMARY.md  KNOWLEDGE-BASE.md  LEARNING-LAYER-ARCHITECTURE.md  MERGE-SUMMARY.md  N8N-FIX-COMPLETE.md  N8N-MASTER-ORCHESTRATOR-GUIDE.md  N8N-QUICK-START.md  N8N-SETUP-GUIDE.md  N8N-TESTING-GUIDE.md  PROJECT-BUILD-WORKFLOW.md  QUICK-REFERENCE.md  QUICK-START.md  QUICK-TEST-COMMANDS.md  README.md  RELEASE-NOTES.md  SECRETS-MANAGEMENT.md  SERVICENOW-TROUBLESHOOTING.md  SERVICENOW-XYOPS-VALIDATION-RESULTS.md  SERVICENOW-XYOPS-VALIDATION.md  SIMULATION-SCENARIO.md  STREAMLIT-QUICKSTART.md  TESTING-GUIDE.md  check_body_refs.py  demo-live.sh  (+8 more)
N8N/: N8N_ACTIVATE_WORKFLOWS.md  N8N_DEPLOYMENT_CHECKLIST.md  N8N_INTEGRATION_FINAL_REPORT.md  N8N_INTEGRATION_SUCCESS.md  N8N_INTEGRATION_SUMMARY.md  N8N_INTEGRATION_VERIFICATION.md  (+13 more)
obs-intelligence/app/obs_intelligence/: __init__.py  anomaly_detector.py  evidence_builder.py  feature_extractor.py  forecaster.py  incident_coordinator.py  learning_store.py  llm_enricher.py  local_llm_enricher.py  metrics_publisher.py  models.py  outcome_store.py  pyproject.toml  recommender.py  risk_scorer.py  scenario_correlator.py  scenario_loader.py  sre_reasoning_agent.py  telemetry_client.py
(+373 files in other folders)
